2009-12-18  Thomas M. Hinkle  <tom@grenville>

	* FAQ: Update FAQ (which was pretty seriously out-of-date).

2009-12-17  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.validate_recdic): Ensure recipe
	info is unicode.

	* src/lib/check_encodings.py: Be less verbose.

	* Version -> 0.15.3
	
	* src/lib/plugins/nutritional_information/parser_data.py (NUTRITION_FIELDS): Update fields for SR21.

	* src/lib/plugins/nutritional_information/nutritionGrabberGui.py (check_for_db):
	Update DBs from SR20 (check if there are choline entries to see if
	the DB is old).

	* src/lib/plugins/nutritional_information/databaseGrabber.py (DatabaseGrabber.parse_abbrevfile):
	Update fields when adding doesn't work.

	* src/lib/plugins/nutritional_information/data_plugin.py (NutritionDataPlugin.update_version): Add new field (choline)

	* src/lib/backends/db.py (RecData.update_version_info): Fix update
	from versions < 0.11.x
	
	* i18n/gourmet.pot: Update.

	* i18n/POTFILES.in: Update to reflect current MANIFEST

	* src/lib/plugins/nutritional_information/parser_data.py (NUTRITION_FIELDS):
	Reorder fields and add choline for SR21 (they changed more than I
	had first thought!)

2009-12-14  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.update_version_info): Fix update
	from versions < 0.11.x

2009-12-11  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/nutritional_information/nutrition.py (foo.SimpleInterface.print_info):
	Be less verbose.
	* src/lib/importers/importer.py (Importer.commit_rec): Make sure
	we provide unicode strings to db.
	* src/lib/reccard.py (IngredientEditorModule.quick_add): Make sure
	we provide unicode strings to DB.
	(DescriptionEditorModule.save): Make sure we provide unicode strings.

2009-12-02  Thomas M. Hinkle  <tom@grenville>

	* src/lib/check_encodings.py (GetFile.__init__): Divide lines
	using built-in splitlines() function -- this fixes problems with
	line breaks on e.g. mac text files.
